--- a/homework_13.csproj
+++ b/homework_13.csproj
@@ -202,7 +202,6 @@
     </Compile>
     <Compile Include="Client.cs" />
     <Compile Include="Homework14.cs" />
-    <Compile Include="SomeException.cs" />
     <Compile Include="WorkSpace.xaml.cs">
       <DependentUpon>WorkSpace.xaml</DependentUpon>
     </Compile>
@@ -270,6 +269,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\homework_15\homework_15.csproj">
+      <Project>{6bff2c14-a816-4cae-9286-e823134c6276}</Project>
+      <Name>homework_15</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\MaterialDesignThemes.4.5.0\build\MaterialDesignThemes.targets" Condition="Exists('packages\MaterialDesignThemes.4.5.0\build\MaterialDesignThemes.targets')" />
